vendor/thiserror-1.0.24/tests/ui/missing-fmt.stderr
error: missing #[error("...")] display attribute
 --> $DIR/missing-fmt.rs:7:5
  |
7 |     B(usize),
  |     ^^^^^^^^
