vendor/thiserror-1.0.24/tests/ui/missing-fmt.rs
use thiserror::Error;

#[derive(Error, Debug)]
pub enum Error {
    #[error("...")]
    A(usize),
    B(usize),
}

fn main() {}
